Properly implement extract even/odd elements for V8SF.

gcc/

2010-05-18  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/44180
	* config/i386/i386.c (expand_vec_perm_even_odd_1): Rewritten
	for V8SFmode.

gcc/testsuite/

2010-05-18  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/44180
	* gcc.target/i386/pr44180.c: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/vect256@159519 138bc75d-0d04-0410-961f-82ee72b054a4